pacrefs/force-app/main/default/objects/MetaDataUpload__c/MetaDataUpload__c.object-meta.xml
<CustomObject>
    <label>MetaDataUpload</label>
    <nameField>
        <displayFormat>MDU-{0000000}</displayFormat>
        <label>MetaDataUpload Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MetaDataUploads</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>