pacrefs/force-app/main/default/objects/MetaDataUpload__c/fields/buildArtifact__c.field-meta.xml
<CustomField>
    <fullName>buildArtifact__c</fullName>
    <description>This is the customer's artifact that is calling the managed package component</description>
    <inlineHelpText>This is the customer's artifact that is calling the managed package component</inlineHelpText>
    <label>buildArtifact</label>
    <length>255</length>
    <type>Text</type>
</CustomField>