pacrefs/force-app/main/default/objects/MetaDataUpload__c/fields/buildVersion__c.field-meta.xml
<CustomField>
    <fullName>buildVersion__c</fullName>
    <description>version of the package build</description>
    <label>buildVersion</label>
    <length>10</length>
    <type>Text</type>
</CustomField>