pacrefs/force-app/main/default/objects/MetaDataUpload__c/fields/CommonBuildArtifact__c.field-meta.xml
<CustomField>
    <fullName>CommonBuildArtifact__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is this artifact common to old and new builds</description>
    <inlineHelpText>Is this artifact common to old and new builds</inlineHelpText>
    <label>CommonBuildArtifact</label>
    <type>Checkbox</type>
</CustomField>