pacrefs/force-app/main/default/objects/MetaDataUpload__c/fields/CommonPackageComponent__c.field-meta.xml
<CustomField>
    <fullName>CommonPackageComponent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is this package component common to old and new builds</description>
    <inlineHelpText>Is this package component common to old and new builds</inlineHelpText>
    <label>CommonPackageComponent</label>
    <type>Checkbox</type>
</CustomField>