pacrefs/force-app/main/default/objects/MetaDataUpload__c/fields/Custom_Artifact__c.field-meta.xml
<CustomField>
    <fullName>Custom_Artifact__c</fullName>
    <formula>buildArtifact__c  &amp; " (" &amp;  metadataType__c &amp; "): " &amp;  buildVersion__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Custom Artifact</label>
    <type>Text</type>
</CustomField>