pacrefs/force-app/main/default/objects/MetaDataUpload__c/fields/fileLine__c.field-meta.xml
<CustomField>
    <fullName>fileLine__c</fullName>
    <label>fileLine</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>