pacrefs/force-app/main/default/objects/MetaDataUpload__c/fields/Ignore_In_Reports__c.field-meta.xml
<CustomField>
    <fullName>Ignore_In_Reports__c</fullName>
    <defaultValue>false</defaultValue>
    <description>checked if the field should be ignored in some reports, for example text class references or indeterminate items</description>
    <inlineHelpText>checked if the field should be ignored in some reports, for example text class references or indeterminate items</inlineHelpText>
    <label>Ignore In Reports</label>
    <type>Checkbox</type>
</CustomField>