pacrefs/force-app/main/default/objects/MetaDataUpload__c/fields/metadataType__c.field-meta.xml
<CustomField>
    <fullName>metadataType__c</fullName>
    <label>metadataType</label>
    <length>50</length>
    <type>Text</type>
</CustomField>