pacrefs/force-app/main/default/objects/MetaDataUpload__c/fields/packageComponent__c.field-meta.xml
<CustomField>
    <fullName>packageComponent__c</fullName>
    <description>The component in the managed package being referenced</description>
    <inlineHelpText>The component in the managed package being referenced</inlineHelpText>
    <label>packageComponent</label>
    <length>255</length>
    <type>Text</type>
</CustomField>