pacrefs/force-app/main/default/objects/MetaDataUpload__c/fields/packageComponentParent__c.field-meta.xml
<CustomField>
    <fullName>packageComponentParent__c</fullName>
    <description>The parent component in the package being referenced (e.g. the object that a referenced field is associated with). This will often be empty</description>
    <inlineHelpText>The parent component in the package being referenced (e.g. the object that a referenced field is associated with). This will often be empty</inlineHelpText>
    <label>packageComponentParent</label>
    <length>255</length>
    <type>Text</type>
</CustomField>