pacrefs/force-app/main/default/objects/MetaDataUpload__c/fields/rawText__c.field-meta.xml
<CustomField>
    <fullName>rawText__c</fullName>
    <description>Text that appears in the metadata file</description>
    <inlineHelpText>Text that appears in the metadata file</inlineHelpText>
    <label>rawText</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>