pacrefs/force-app/main/default/objects/MetaDataUpload__c/listViews/MDU.listView-meta.xml
<ListView>
    <fullName>MDU</fullName>
    <columns>NAME</columns>
    <columns>buildArtifact__c</columns>
    <columns>metadataType__c</columns>
    <columns>packageComponent__c</columns>
    <columns>packageComponentParent__c</columns>
    <columns>rawText__c</columns>
    <filterScope>Mine</filterScope>
    <label>MDU</label>
</ListView>